# conversation-analyser

./: .gitignore  README.md  pyproject.toml
examples/: basic_usage.md
scripts/: calibrate_ct_score.py
src/conversation_analyser/: __init__.py  analytics.py  api.py  cli.py  config.py  embedding.py  embeddings.py  llm.py  manifest.py  models.py  pipeline.py  scoring.py  taxonomy.py
src/conversation_analyser/parsers/: __init__.py  anythingllm.py  base.py  llm_segment.py  markers.py  registry.py  role_content.py
tests/: test_analytics.py  test_api.py  test_cli_smoke.py  test_embedding.py  test_manifest.py  test_parsers.py  test_pipeline.py  test_scoring.py  test_taxonomy.py
tests/fixtures/: anythingllm.json  role_content.json  transcript.txt
