[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "conversation-analyser"
version = "0.1.1"
description = "Critical-thinking and analytics for human-AI conversations — a member of the lens analyser family."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "textstat>=0.7",
    "vaderSentiment>=3.3",
    "pyspellchecker>=0.8",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.9",
    "rich>=13.7.0",
]

[project.optional-dependencies]
embeddings = ["sentence-transformers>=2.2", "numpy>=1.24"]
llm = ["anthropic>=0.39"]
dev = ["pytest>=8.0", "httpx>=0.27.0"]

[project.scripts]
conversation-analyser = "conversation_analyser.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/conversation_analyser"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-m 'not slow and not integration'"
markers = [
    "slow: loads real models (sentence-transformers) or downloads weights — opt-in with -m slow",
    "integration: makes live LLM calls — opt-in with -m integration",
]
